[Product excellance] Add test cases for enrich mediator and Utils (#3016)