@@ -36,53 +36,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <inherited>false</inherited>
-                <configuration>
-                    <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m</argLine>
-                    <disableXmlReport>false</disableXmlReport>
-                    <parallel>false</parallel>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
-                    </suiteXmlFiles>
-                    <systemProperties>
-                        <property>
-                            <!-- Common resource directory (eg: Key stores, certificates, etc.)-->
-                            <name>test.resources.dir</name>
-                            <value>
-                                ${basedir}/../../resources/
-                            </value>
-                        </property>
-                        <property>
-                            <!-- Directory containing carbon applications -->
-                            <name>test.resources.carbonApplications.dir</name>
-                            <value>
-                                ${basedir}/../../../04-SynapseConfigProject/04-synapseConfigCompositeApplication/target/
-                            </value>
-                        </property>
-                        <property>
-                            <!-- Related carbon applications (comma separated) to deploy -->
-                            <name>test.resources.carbonApplications.list</name>
-                            <value>
-                                04-synapseConfigCompositeApplication_1.0.0
-                            </value>
-                        </property>
-                        <property>
-                            <name>server.list</name>
-                            <value>
-                                ESB
-                            </value>
-                        </property>
-                        <property>
-                            <name>usedefaultlisteners</name>
-                            <value>false</value>
-                        </property>
-                        <sec.verifier.dir>${basedir}/target/security-verifier/</sec.verifier.dir>
-                        <maven.test.haltafterfailure>false</maven.test.haltafterfailure>
-                        <instr.file>${basedir}/../coverage-report/instrumentation.txt</instr.file>
-                        <filters.file>${basedir}/../coverage-report/filters.txt</filters.file>
-                    </systemProperties>
-                    <workingDirectory>${basedir}/target</workingDirectory>
-                </configuration>
+                <inherited>true</inherited>
             </plugin>
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
